--- a/calculos.css
+++ b/calculos.css
@@ -25,6 +25,11 @@
     color: #1f1918;
     font-size: 24px;
    }
+.grid{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+}
 .grid-2{
   display: grid;
   grid-template-columns: auto auto;
@@ -33,10 +38,7 @@
   display: grid;
   grid-template-columns: auto auto auto;
 }
-.grid-2 h1{
-  color: blue;
-}
-.grid-3 h1{
+h1{
   color: blue;
 }
 
